objects/TW1_Auditoria_Inf_Historicas__c.object
<CustomObject>
    <description>Objeto que deverá guardar o histórico de consultas do usuário a tela de informações históricas da propriedade.</description>
    <fields>
        <fullName>TW1_Data_da_pesquisa__c</fullName>
        <label>Data da pesquisa</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_LUC_pesquisada__c</fullName>
        <label>LUC pesquisada</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca_pesquisada__c</fullName>
        <label>Marca pesquisada</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Segmento_pesquisado__c</fullName>
        <label>Segmento pesquisado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping_pesquisado__c</fullName>
        <label>Shopping pesquisado</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_pesquisa__c</fullName>
        <label>Tipo de pesquisa</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuário</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auditoria_Inf_Historicas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auditoria Inf. Histórica</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Segmento_pesquisado__c</columns>
        <columns>TW1_Shopping_pesquisado__c</columns>
        <columns>TW1_LUC_pesquisada__c</columns>
        <columns>TW1_Marca_pesquisada__c</columns>
        <columns>TW1_Tipo_de_pesquisa__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ID Auditoria Inf. Históricas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditoria Inf. Históricas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>